# YA-RPC

./: CMakeLists.txt
3rd/: json.hpp
definitions/: s1.json  s2.json
include/: RpcRequest.h  RpcResponse.h  RpcServer.h  RpcServiceStubInterface.h  ServiceDefine.h  TestRPCServer.h  utils.h
src/: ServiceDefine.cpp  utils.cpp
src/sample/: TestRPCServer.cpp  main.cpp
src/sample/services/: ArcService.cpp  ArcService.h  ArcServiceStub.h  SampleService.cpp  SampleService.h  SampleServiceStub.h  StringService.cpp  StringService.h  StringServiceStub.h
src/server/: RpcRequest.cpp  RpcResponse.cpp  RpcServer.cpp
